add eslint and prettier

--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
   "name": "elmaonline-site",
   "type": "module",
+  "private": true,
   "packageManager": "yarn@3.2.3",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon"
+    "start": "nodemon",
+    "lint": "eslint --ignore-path .gitignore --ignore-pattern \"!**/.*\" ."
   },
   "dependencies": {
     "express": "^4.18.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "eslint": "latest",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "nodemon": "^2.0.19",
+    "prettier": "2.7.1"
   }
 }
